# AoC24

./: .gitignore  CMakeLists.txt  README.md  createProj.py
Day01/FirstQuestion/: CMakeLists.txt  main.cpp
Day01/SecondQuestion/: CMakeLists.txt  main.cpp
Day02/FirstQuestion/: CMakeLists.txt  main.cpp
Day02/SecondQuestion/: CMakeLists.txt  main.cpp
Day03/FirstQuestion/: CMakeLists.txt  main.cpp
Day03/SecondQuestion/: CMakeLists.txt  main.cpp
Day04/FirstQuestion/: CMakeLists.txt  main.cpp
Day04/SecondQuestion/: CMakeLists.txt  main.cpp
Day05/FirstQuestion/: CMakeLists.txt  main.cpp
Day05/SecondQuestion/: CMakeLists.txt  main.cpp
Day06/FirstQuestion/: CMakeLists.txt  main.cpp
Day06/SecondQuestion/: CMakeLists.txt  main.cpp
Day07/FirstQuestion/: CMakeLists.txt  main.cpp
Day07/SecondQuestion/: CMakeLists.txt  main.cpp
Day08/FirstQuestion/: CMakeLists.txt  main.cpp
Day08/SecondQuestion/: CMakeLists.txt  main.cpp
Day09/FirstQuestion/: CMakeLists.txt  main.cpp
Day09/SecondQuestion/: CMakeLists.txt  main.cpp
Day10/FirstQuestion/: CMakeLists.txt  main.cpp
Day10/SecondQuestion/: CMakeLists.txt  main.cpp
Day11/FirstQuestion/: CMakeLists.txt  main.cpp
Day11/SecondQuestion/: CMakeLists.txt  main.cpp
Day12/FirstQuestion/: CMakeLists.txt  main.cpp
Day12/SecondQuestion/: CMakeLists.txt  main.cpp
Day13/FirstQuestion/: CMakeLists.txt  main.cpp
Day13/SecondQuestion/: CMakeLists.txt  main.cpp
Day14/FirstQuestion/: CMakeLists.txt  main.cpp
Day14/SecondQuestion/: CMakeLists.txt  main.cpp
Day20/FirstQuestion/: CMakeLists.txt  main.cpp
Day20/SecondQuestion/: CMakeLists.txt  main.cpp
Day22/FirstQuestion/: CMakeLists.txt  main.cpp
Day22/SecondQuestion/: CMakeLists.txt  main.cpp
Day23/FirstQuestion/: CMakeLists.txt  main.cpp
Day23/SecondQuestion/: CMakeLists.txt  main.cpp
