cmake_minimum_required(VERSION 3.24)
project(AdventOfCode2024)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(Day01/FirstQuestion)
add_subdirectory(Day01/SecondQuestion)
add_subdirectory(Day02/FirstQuestion)
add_subdirectory(Day02/SecondQuestion)
add_subdirectory(Day03/FirstQuestion)
add_subdirectory(Day03/SecondQuestion)
