cmake_minimum_required(VERSION 3.24)
project(AdventOfCode2024)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(Day01/FirstQuestion)
add_subdirectory(Day01/SecondQuestion)
add_subdirectory(Day02/FirstQuestion)
add_subdirectory(Day02/SecondQuestion)
add_subdirectory(Day03/FirstQuestion)
add_subdirectory(Day03/SecondQuestion)
add_subdirectory(Day04/FirstQuestion)
add_subdirectory(Day04/SecondQuestion)
add_subdirectory(Day05/FirstQuestion)
add_subdirectory(Day05/SecondQuestion)
add_subdirectory(Day06/FirstQuestion)
add_subdirectory(Day06/SecondQuestion)
add_subdirectory(Day07/FirstQuestion)
add_subdirectory(Day07/SecondQuestion)
add_subdirectory(Day08/FirstQuestion)
add_subdirectory(Day08/SecondQuestion)
add_subdirectory(Day09/FirstQuestion)
add_subdirectory(Day09/SecondQuestion)
add_subdirectory(Day10/FirstQuestion)
add_subdirectory(Day10/SecondQuestion)
add_subdirectory(Day11/FirstQuestion)
add_subdirectory(Day11/SecondQuestion)
add_subdirectory(Day12/FirstQuestion)
add_subdirectory(Day12/SecondQuestion)
add_subdirectory(Day13/FirstQuestion)
add_subdirectory(Day13/SecondQuestion)
